# native-utils

./: .depcheckrc.json  .gitattributes  .gitignore  .gitmodules  .prettierignore  .yarnrc.yml  CHANGELOG.md  NativeUtils.podspec  NitroSecp256k1.podspec  README.md  SUBMODULES.md  eslint.config.mjs  jest.config.js  nitro.json  package.json  tsconfig.json  typedoc.json
.github/: CODEOWNERS
.github/workflows/: build-lint-test.yml  publish-release.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/metamask/nativeutils/: NativeUtilsPackage.kt
android/src/main/java/com/margelo/nitro/nitrosecp256k1/: NitroSecp256k1Package.kt
cpp/: HybridNativeUtils.cpp  HybridNativeUtils.hpp  HybridNitroSecp256k1.cpp  HybridNitroSecp256k1.hpp  botan_conditional.cpp  botan_conditional.h  hex_utils.cpp  hex_utils.hpp  hmac_sha512.c  hmac_sha512.h  keccak-tiny.c  keccak-tiny.h  secp256k1_wrapper.h
cpp/libsodium_cmake/: CMakeLists.txt
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/metamask/nativeutils/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/java/nitrosecp256k1/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/NativeUtilsExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/NativeUtilsExample.xcodeproj/: project.pbxproj
example/ios/NativeUtilsExample.xcodeproj/xcshareddata/xcschemes/: NativeUtilsExample.xcscheme
example/ios/NativeUtilsExample.xcworkspace/: contents.xcworkspacedata
example/ios/NitroSecp256k1Example/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/NitroSecp256k1Example.xcodeproj/: project.pbxproj
example/ios/NitroSecp256k1Example.xcodeproj/xcshareddata/xcschemes/: NitroSecp256k1Example.xcscheme
example/ios/NitroSecp256k1Example.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx  testUtils.ts
example/src/benchmarks/: ed25519Benchmark.ts  hmacSha512Benchmark.ts  keccak256Benchmark.ts  pubToAddressBenchmark.ts  publicKeyBenchmark.ts
example/src/tests/: comprehensiveHmacSha512Tests.ts  ed25519NobleCompatibilityTests.ts  ed25519NobleExtractedTests.ts  ed25519Tests.ts  hmacSha512Tests.ts  keccak256Tests.ts  nobleCompatibilityTests.ts  nobleExtractedTests.ts  pubToAddressTests.ts  publicKeyTests.ts  rfc4231Validation.ts
example/src/vectors/: vectors.json
scripts/: build-botan.sh  verify-submodules.sh
src/: NativeUtils.nitro.ts  NitroSecp256k1.nitro.ts  index.tsx  utils.ts
